<resources>
    <string name="app_name">Reminder</string>
    <string name="friday">Friday</string>
    <string name="monday">Monday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="create">Create</string>
    <string name="textView">TextView</string>
    <string name="action_delAll">Delete all tasks</string>
    <string name="action_Quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="okSearch">OK</string>
    <string name="search">Search</string>
    <string name="deleteAll">Delete all tasks?</string>
    <string name="write">Write task</string>
    <string name="emptyTask">Task is empty</string>
    <string name="Language">Language</string>
    <string name="English">English</string>
    <string name="Ukrainian">Українська</string>
    <string name="labelSunday">Sunday</string>
    <string name="labelMonday">Monday</string>
    <string name="labelTuesday">Tuesday</string>
    <string name="labelWednesday">Wednesday</string>
    <string name="labelThursday">Thursday</string>
    <string name="labelFriday">Friday</string>
    <string name="labelSaturday">Saturday</string>
    <string name="deleteAllTasks">Delete All</string>
    <string name="searchSunday">Sunday</string>
    <string name="searchMonday">Monday</string>
    <string name="searchTuesday">Tuesday</string>
    <string name="searchWednesday">Wednesday</string>
    <string name="searchThursday">Thursday</string>
    <string name="searchFriday">Friday</string>
    <string name="searchSaturday">Saturday</string>

</resources>
