<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="babiy.reminder.MainActivity">

    <Button
        android:text="@string/thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnThursday"
        android:layout_alignBaseline="@+id/btnWednesday"
        android:layout_alignBottom="@+id/btnWednesday"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:id="@+id/btnTuesday"
        android:layout_below="@+id/btnMonday"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMonday"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btnWednesday"
        android:layout_marginTop="43dp" />

    <Button
        android:text="@string/wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnWednesday"
        android:layout_alignBaseline="@+id/btnTuesday"
        android:layout_alignBottom="@+id/btnTuesday"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSaturday"
        android:layout_alignBottom="@+id/btnFriday"
        android:layout_toEndOf="@+id/btnWednesday"
        android:layout_marginStart="13dp"
        android:layout_alignTop="@+id/btnFriday" />

    <Button
        android:text="@string/friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:id="@+id/btnFriday"
        android:layout_marginStart="57dp"
        android:layout_below="@+id/btnTuesday"
        android:layout_alignStart="@+id/btnTuesday" />

    <Button
        android:text="@string/sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSunday"
        android:layout_alignBaseline="@+id/btnMonday"
        android:layout_alignBottom="@+id/btnMonday"
        android:layout_alignStart="@+id/btnFriday" />
</RelativeLayout>
